// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should navigate when a link is clicked: with-href 1`] = `
<a
  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-ur4oxz-MuiTypography-root-MuiLink-root"
  data-testid="with-href"
>
  Some test link
</a>
`;

exports[`should render a link with null href: null-href 1`] = `
<a
  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-qztcla-MuiTypography-root-MuiLink-root"
  data-testid="null-href"
>
  Some test link
</a>
`;

exports[`should render a link: basic-link 1`] = `
<a
  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-qztcla-MuiTypography-root-MuiLink-root"
  data-testid="basic-link"
>
  Some test link
</a>
`;

exports[`should render active on the current path: some-test-link 1`] = `
<a
  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-ur4oxz-MuiTypography-root-MuiLink-root"
  data-testid="some-test-link"
>
  Some test link
</a>
`;

exports[`should render disabled link: disabled-link 1`] = `
<a
  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1tgc2fw-MuiTypography-root-MuiLink-root"
  data-testid="disabled-link"
>
  Some test link
</a>
`;

exports[`should render disabled link: disabled-link 2`] = `
<div>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1tgc2fw-MuiTypography-root-MuiLink-root"
    data-testid="disabled-link"
  >
    Some test link
  </a>
  <div
    data-testid="route-location"
  >
    /
  </div>
</div>
`;
